# solana-verified-programs-api

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  install-verify.sh  nginx.conf  schema.rs
.github/workflows/: ci.yaml  docker-publish.yml  release.yaml  verify-smoke.yaml
api/: Cargo.toml  Dockerfile  Dockerfile.db-init
api/migrations/: 0001_init.sql
api/migrations/2023-07-04-082332_init/: down.sql  up.sql
api/migrations/2024-10-10-061245_create_logs_table/: down.sql  up.sql
api/migrations/2024-11-22-184632_track_signer_upload/: down.sql  up.sql
api/migrations/2025-01-08-053812_add_is_frozen_to_program_authority/: down.sql  up.sql
api/migrations/2025-01-10-083542_add_is_frozen_to_program_authority/: down.sql  up.sql
api/migrations/2025-07-04-150745_add_performance_indexes/: down.sql  up.sql
api/migrations/2025-08-06-133901_add_is_closed_to_program_authority/: down.sql  up.sql
api/migrations/2025-08-20-144137_add_arch_to_solana_program_builds/: down.sql  up.sql
api/migrations/2026-06-29-000001_add_workspace_path_to_solana_program_builds/: down.sql  up.sql
api/src/: builder.rs  config.rs  db.rs  errors.rs  logging.rs  main.rs  responses.rs  schema.rs  state.rs  validation.rs
api/src/api/: index.rs  init.rs  mod.rs
api/src/api/handlers/: async_verify.rs  health.rs  job_status.rs  logs.rs  mod.rs  pda_worker.rs  sync_verify.rs  unverify.rs  verification_status.rs  verified_programs_list.rs  verified_programs_status.rs  verify_helpers.rs
api/src/api/routes/: job.rs  mod.rs  verify_async.rs  verify_sync.rs
api/src/db/: authority.rs  connection.rs  job.rs  logs.rs  mod.rs  params.rs  programs.rs  redis.rs  verification.rs
api/src/db/models/: db_models.rs  mod.rs  params.rs  responses.rs  unverify.rs
api/src/models/: db_models.rs
api/src/routes/: job.rs  status.rs  verified_programs.rs  verify_async.rs  verify_sync.rs
api/src/services/: background_jobs.rs  logging.rs  misc.rs  mod.rs  onchain.rs  rpc_manager.rs  verification.rs
api/src/services/onchain/: mod.rs  program_authority_retriever.rs  program_hash_retriver.rs  program_metadata_retriever.rs
backupdata/: postmaster.pid
backupdata/base/16384/: 1247  1249  1259  2224  24576  24578  24578_fsm  24578_vm  24588  24589  24591  24593  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  2840  2840_fsm  2840_vm  (+4 more)
backupdata/global/: 1260  1262  2671  pg_control  pg_internal.init
backupdata/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
backupdata/pg_xact/: 0000
crawler/: Cargo.toml  Dockerfile  diesel.toml  script.sh
crawler/migrations/2024-03-11-035137_mainnet_programs/: down.sql  up.sql
crawler/security-txt/: Cargo.toml
crawler/src/: crawler.rs  errors.rs  github.rs  helper.rs  main.rs  schema.rs
crawler/src/api/: client.rs  models.rs
crawler/src/db/: client.rs  misc.rs  mod.rs  models.rs
crawler/src/security_txt/: mod.rs  parser.rs
docker/: api.Dockerfile
migrations/: 0001_init.sql
migrations/2023-07-04-082332_init/: down.sql  up.sql
migrations/2024-01-11-080939_update/: down.sql  up.sql
src/: builder.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  operations.rs  routes.rs  schema.rs  state.rs  sweep.rs  types.rs  utils.rs
src/api/: mod.rs  responses.rs  routes.rs
src/api/handlers/: async_verify.rs  health.rs  index.rs  job_status.rs  logs.rs  mod.rs  pda_worker.rs  resolve_hash.rs  sync_verify.rs  unverify.rs  verification_status.rs  verified_programs_list.rs  verified_programs_status.rs  verify_helpers.rs
src/models/: db_models.rs  params.rs  responses.rs
src/onchain/: mod.rs  otter.rs  state.rs
src/routes/: status.rs  verified_programs.rs  verify_async.rs  verify_sync.rs
tests/: integration.rs  migration.rs  routing.rs  sweep.rs  verify_smoke.rs  webhooks.rs
tests/common/: mod.rs  rpc.rs
