[package]
name = "verified_programs_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
chrono = { version = "0.4.26", features = ["serde"] }
serde_json = "1.0.99"
serde = { version = "1.0.166", features = ["derive"] }
uuid = { version = "1.4.0", features = [
    "v4",
    "fast-rng",
] }
