[package]
name = "verified_programs_api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool"] }
dotenv = "0.15"
libc = "0.2"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower_governor = "0.0.4"
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
uuid = { version = "1.4.0", features = [
    "v4",
    "fast-rng",
] }
