[package]
name = "verified_programs_api"
version = "1.5.0"
edition = "2021"

[features]
default = []
use-external-pdas = []

[dependencies]
axum = "0.6.18"
borsh = "1.5.1"
chrono = { version = "0.4.35", features = ["serde"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono", "r2d2"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
dotenv = { version = "0.15" }
envy = "0.4.2"
futures = "0.3.31"
once_cell = "1.20.2"
redis = { version = "0.32.3", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = { version = "1.0.99" }
solana-account-decoder = { version = "2.0.13" }
solana-client = "2.0.13"
solana-sdk = { version = "2.0.13" }
solana-transaction-status = "2.1.7"
thiserror = { version = "1.0.44" }
tokio = { version = "1.43.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tower_governor = { version = "0.0.4" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.20", features = ["json"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }

# Test dependencies
[dev-dependencies]
tempfile = "3.10.1"
tokio-test = "0.4.3"



