[package]
name = "verified_programs_api"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = "0.8"
borsh = "1.5.1"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
hex = "0.4"
once_cell = "1.20.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
sha2 = "0.11.0"
solana-account-decoder = "3.1.8"
solana-client = "3.1.8"
solana-pubkey = "4.2.0"
solana-sdk-ids = "3.1.0"
solana-signature = "3.4.0"
solana-transaction-status = "3.1.8"
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-webpki", "chrono", "uuid", "macros", "migrate"] }
thiserror = "2"
tokio = { version = "1.43.1", features = ["full"] }
tower = { version = "0.5.3", features = ["limit", "buffer", "util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-zstd"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
tempfile = "3.10.1"
