
[package]
name = "crawler"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam-channel = "0.5.13"
diesel = { version = "2.2.4", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }
dotenv = "0.15"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
solana-account-decoder = "2.0.13"
solana-client = "2.0.13"
solana-sdk = "2.0.13"
thiserror = { version = "1.0.30" }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
twoway = "0.2.2"
